<resources>
    <string name="app_name">lottery-android</string>
    <string name="title_topic">帖子</string>
    <string name="title_filter">缩水</string>
    <string name="title_user">用户</string>


    <string name="filter_danma">定胆码</string>
    <string name="filter_hewei">定和尾</string>
    <string name="filter_kuadu">定跨度</string>
    <string name="filter_erma">定二码</string>
    <string name="filter_shama">杀码</string>
    <string name="filter_bt_text">开始缩水</string>
    <string name="filter_no_danma_error">必须至少选择一个胆码</string>
    <string name="filter_result_copy_tips">长按可复制结果</string>
    <string name="filter_result">注数：%1$d\n%2$s</string>
    <string name="copy_success">已复制到剪切板</string>
    <string name="filter_rongcuo_config">容错设置：</string>
    <string name="module_filter">缩水</string>
    <string name="module_bbs">论坛</string>
    <string name="module_query">查询</string>
    <string name="module_friend">彩友</string>
    <string name="module_buy">购买</string>
    <string name="query_qihao">期号</string>
    <string name="query_shijihao">试机号</string>
    <string name="query_jianghao">开奖号</string>
    <string name="query_hezhi">和值</string>
    <string name="query_kuadu">跨度</string>
    <string name="rec_write_post">发布预测</string>
    <string name="user_not_login">未登录</string>
    <string name="login">登录</string>
    <string name="goto_login">去登录</string>
    <string name="register">注册</string>
    <string name="goto_register">去注册</string>
    <string name="login_fail">登录失败</string>
    <string name="load_fail">加载失败</string>
    <string name="post_detail">预测详情</string>
    <string name="post_list">帖子列表</string>
    <string name="post_filter">筛选</string>
    <string name="activity_userInfo">用户信息</string>
    <string name="app_version_info">版本号：%1$s</string>

</resources>
